Rename doc environment to docs
As per the governance resolution https://review.openstack.org/119875,
projects should have a docs environment in their tox.ini testing
interface. Rename the doc environment to docs.

Change-Id: Ie7c685c3af1abc480bcd7cf3d54e018ad74081a4

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,7 @@ commands = {toxinidir}/tests_ci/rally-integrated.sh
 [testenv:cover]
 commands = python setup.py testr --coverage --testr-args='{posargs}'
 
-[testenv:doc]
+[testenv:docs]
 changedir = doc/source
 commands = make html
 
