--- a/samples/plugins/sla/test_sla.yaml
+++ b/samples/plugins/sla/test_sla.yaml
@@ -11,5 +11,5 @@
         users:
           tenants: 1
           users_per_tenant: 1
-        create_flavor:
-          ram: 512
+      sla:
+        max_duration_range: 2.5
