--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -593,6 +593,23 @@
       sla:
         max_failure_percent: 0
 
+  CinderVolumes.create_and_attach_volume:
+    -
+      args:
+        volume_size: 1
+        image:
+          name: "cirros-0.3.2-x86_64-uec"
+        flavor:
+          name: "m1.tiny"
+      runner:
+        type: "constant"
+        times: 3
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+
   GlanceImages.create_and_delete_image:
     -
       args:
