--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ python-heatclient>=0.2.9
 python-ceilometerclient>=1.0.6
 python-ironicclient>=0.2.1
 python-saharaclient>=0.7.3
+python-zaqarclient>=0.0.3
 python-subunit>=0.0.18
 requests>=1.2.1,!=2.4.0
 SQLAlchemy>=0.8.4,<=0.8.99,>=0.9.7,<=0.9.99
