Fix bug in atomic actions
Some code cleanup for the recently merged https://review.openstack.org/111977

We took the atomic actions list by mistake always from the first iteration;
we should continue taking this list from the first non-failed iteration.
Add functional testing for this case.

We also fix the missing "%" sign in the output CLI table in case there were
no successful atomic action iterations.

Co-authored-by: Oleg Anufriev <oanufriev@mirantis.com>
Change-Id: Id4095122be8dd8bffeeaeabe407ff76c0f294686
Closes-Bug: 1372739
Closes-Bug: 1372998
Closes-Bug: 1373488
Closes-Bug: 1373576

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -289,6 +289,15 @@
       sla:
         max_failure_percent: 0
 
+  Dummy.dummy_random_fail_in_atomic:
+    -
+      args:
+        exception_probability: 0.5
+      runner:
+        type: "constant"
+        times: 50
+        concurrency: 10
+
   FakePlugin.testplugin:
     -
       runner:
