Add volume option to boot server from volume and run script
nova and cinder may set to different disk backend, e.g. nova use
local disk for image, and cinder use rbd volume_driver. This patch
will add flexibility for user to choose where the vm is booted
from.

Based on boot_runcommand_delete scenario, add new option for volume:
volume_args, which is default to "None". It is a dict option and
'size' parameter is supported now. If volume_args is assigned, this
scenario will create a volume_args['size'] size volume, and boot
from the new volume, finally run "script".

Here is a sample scenario:

    "VMTasks.boot_runcommand_delete": [
        {
            "args": {
                "flavor": {
                    "name": "m1.tiny"
                },
                "image": {
                    "name": "cirros"
                },
                "volume_args": {
                    "size": 2
                },
                "script": "./instance_dd_test.sh",
                ...

Change-Id: I6993c046bcf5a8632b08d46ae380067ffa677f84

--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -946,6 +946,31 @@
           name: "m1.tiny"
         image:
           name: "cirros-0.3.2-x86_64-uec"
+        volume_args:
+            size: 2
+        fixed_network: "private"
+        floating_network: "public"
+        use_floatingip: true
+        script: "/home/jenkins/.rally/extra/instance_dd_test.sh"
+        interpreter: "/bin/sh"
+        username: "cirros"
+      runner:
+        type: "constant"
+        times: 2
+        concurrency: 2
+      context:
+        users:
+          tenants: 1
+          users_per_tenant: 1
+      sla:
+        max_failure_percent: 0
+
+    -
+      args:
+        flavor:
+          name: "m1.tiny"
+        image:
+          name: "cirros-0.3.2-x86_64-uec"
         fixed_network: "private"
         use_floatingip: false
         script: "/home/jenkins/.rally/extra/instance_dd_test.sh"
