Cover Rally with docstrings & Test this coverage
Rally should have detailed docstrings for:
* Benchmark scenario classes
* Benchmark scenarios
* Deploy engines
* Server providers
* SLA

Here we add such docstrings and also add a test suite that checks
that Rally is 100% covered with docstrings and that these docstrings
are correctly formed.

We also change the interface of the following benchmark scenarios
(for the sake of unification):
* CinderVolumes.create_and_attach_volume
* CinderVolumes.create_snapshot_and_attach_volume
* CinderVolumes.create_nested_snapshots_and_attach_volume

Finally, we refactor a bit NovaServers.boot_and_bounce_server.

Change-Id: Ia38c8fc2d692a09719d3e068d332647d4b0da47f

--- a/doc/samples/tasks/scenarios/cinder/create-snapshot-and-attach-volume.yaml
+++ b/doc/samples/tasks/scenarios/cinder/create-snapshot-and-attach-volume.yaml
@@ -3,7 +3,7 @@
     -
       args:
           volume_type: false
-          volume_size:
+          size:
               min: 1
               max: 5
       runner:
@@ -23,7 +23,7 @@
     -
       args:
           volume_type: true
-          volume_size:
+          size:
               min: 1
               max: 5
       runner:
