Fix bash completition setup
Change-Id: Ibe3290a273b99ea3a468a4b67b2dde54f01998a3

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,10 @@ classifier =
 packages =
     rally
 
+data_files =
+    /etc/bash_completion.d =
+        tools/rally.bash_completion
+
 [entry_points]
 console_scripts =
     rally = rally.cmd.main:main
