--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ jsonschema>=2.0.0,<3.0.0
 netaddr>=0.7.12
 oslo.config>=1.4.0  # Apache-2.0
 oslo.db>=1.0.0  # Apache-2.0
+oslo.i18n>=1.0.0  # Apache-2.0
 oslo.serialization>=1.0.0  # Apache-2.0
 oslo.utils>=1.0.0  # Apache-2.0
 paramiko>=1.13.0
