Allow user specified tempest.conf
* Allow user specified tempest.conf in tempest benchmark tasks

Change-Id: I2591aa2febef3313cfcf0060566d17349d5da5ac
Closes-Bug: #1369407

--- a/doc/samples/tasks/scenarios/tempest/all_tests.yaml
+++ b/doc/samples/tasks/scenarios/tempest/all_tests.yaml
@@ -1,6 +1,8 @@
 ---
   TempestScenario.all:
     -
+      args:
+          tempest_conf: "/etc/tempest/tempest.conf"
       runner:
         type: "constant"
         times: 1
