--- a/doc/samples/tasks/scenarios/tempest/set.yaml
+++ b/doc/samples/tasks/scenarios/tempest/set.yaml
@@ -2,6 +2,7 @@
   TempestScenario.set:
     -
       args:
+        tempest_conf: "/etc/tempest/tempest.conf"
         set_name: "image"
       runner:
         type: "constant"
