Adding new scenarious for Heat
Previously all scenarious use only empty template. New scenarious use
templates with neutron and cinder resources.

Change-Id: I9bb349835ba3355902fb116980e241e3b77c9e49

--- a/rally-scenarios/rally-neutron.yaml
+++ b/rally-scenarios/rally-neutron.yaml
@@ -442,3 +442,18 @@
           users_per_tenant: 2
       sla:
         max_failure_percent: 0
+
+  HeatStacks.create_and_delete_stack:
+    -
+      args:
+        template_path: '/home/jenkins/.rally/extra/server_with_ports.yaml.template'
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
