Add a servers context and a cinder stress scenario
Based on https://github.com/WaltHP/cinder-stress/commits/master/qaStressTest.py
this scenario creates n volumes and performs the following sequence using
those volumes:

1. Create snapshots
2. Attach volumes
3. Detach volumes
4. Delete snapshots
5. Delete volumes

The servers context setup instantiates n servers and removes them on cleanup.

Co-Authored-By: Cesar Mojica <cesar.mojica@hp.com>
Co-Authored-By: Anthony Lee <anthony.mic.lee@hp.com>
Change-Id: I8e32cbef57f12079e78a8f7ae73f2af4835d2cb5

--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -751,6 +751,53 @@
         failure_rate:
           max: 0
 
+  CinderVolumes.create_snapshot_and_attach_volume:
+    -
+      args:
+          volume_type: false
+          min_volume_size: 1
+          max_volume_size: 5
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 1
+        servers:
+          image:
+            name: "^cirros.*uec$"
+          flavor:
+            name: "m1.tiny"
+          servers_per_tenant: 2
+      sla:
+          failure_rate:
+            max: 0
+    -
+      args:
+          volume_type: true
+          min_volume_size: 1
+          max_volume_size: 5
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        users:
+          tenants: 2
+          users_per_tenant: 1
+        servers:
+          image:
+            name: "^cirros.*uec$"
+          flavor:
+            name: "m1.tiny"
+          servers_per_tenant: 2
+      sla:
+          failure_rate:
+            max: 0
+
+
   GlanceImages.create_and_delete_image:
     -
       args:
