Changes in getting image id from image name functionality
(types.ImageResourceType.transform method)

1. Changing sample scenario files to store image name as
regexp. This will help avoid further issues with current
image version of devstack and rally being out of sync.

2. Changing logic of _id_from_name method. name and regex
keys from resource_config dictionary are treated the same,
(as regexp) with name having priority. Going forward 'name'
key should always be used, and 'regexp' key is to there to
support legacy configurations. Also, exact check will be
performed on resource name.

3. Related unit test changed correspodently..

4. Added unit test for multiple maches of the same image name.

Change-Id: Ie0fc509445a652384f78864ad7d491e34b5a4d88

--- a/doc/samples/tasks/scenarios/nova/boot-bounce-delete.yaml
+++ b/doc/samples/tasks/scenarios/nova/boot-bounce-delete.yaml
@@ -5,7 +5,7 @@
         flavor:
             name: "m1.nano"
         image:
-            name: "cirros-0.3.1-x86_64-uec"
+            name: "^cirros.*uec$"
         actions:
           -
             hard_reboot: 1
