--- a/doc/samples/tasks/scenarios/nova/boot-snapshot-boot-delete.yaml
+++ b/doc/samples/tasks/scenarios/nova/boot-snapshot-boot-delete.yaml
@@ -5,7 +5,7 @@
         flavor:
             name: "m1.nano"
         image:
-            name: "cirros-0.3.1-x86_64-uec"
+            name: "^cirros.*uec$"
       runner:
         type: "constant"
         times: 10
