--- a/doc/samples/tasks/scenarios/nova/resize-server.yaml
+++ b/doc/samples/tasks/scenarios/nova/resize-server.yaml
@@ -5,7 +5,7 @@
         flavor:
             name: "m1.nano"
         image:
-            name: "cirros-0.3.1-x86_64-uec"
+            name: "^cirros.*uec$"
         to_flavor:
             name: "m1.small"
         confirm: true
