--- a/doc/samples/tasks/scenarios/vm/boot-runcommand-delete-with-disk.yaml
+++ b/doc/samples/tasks/scenarios/vm/boot-runcommand-delete-with-disk.yaml
@@ -5,7 +5,7 @@
         flavor:
             name: "m1.nano"
         image:
-            name: "cirros-0.3.1-x86_64-uec"
+            name: "^cirros.*uec$"
         volume_args:
             size: 2
         fixed_network: "private"
