--- a/rally-scenarios/rally.yaml
+++ b/rally-scenarios/rally.yaml
@@ -668,7 +668,7 @@
       args:
         volume_size: 1
         image:
-          name: "cirros-0.3.2-x86_64-uec"
+          name: "^cirros.*uec$"
         flavor:
           name: "m1.tiny"
       runner:
@@ -760,7 +760,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "cirros-0.3.2-x86_64-uec"
+            name: "^cirros.*uec$"
       runner:
         type: "constant"
         times: 4
@@ -778,7 +778,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "cirros-0.3.2-x86_64-uec"
+            name: "^cirros.*uec$"
         detailed: True
       runner:
         type: "constant"
@@ -797,7 +797,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "cirros-0.3.2-x86_64-uec"
+            name: "^cirros.*uec$"
         to_flavor:
             name: "m1.small"
         confirm: true
@@ -818,7 +818,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "cirros-0.3.2-x86_64-uec"
+            name: "^cirros.*uec$"
         actions:
           -
             hard_reboot: 1
@@ -845,7 +845,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "cirros-0.3.2-x86_64-uec"
+            name: "^cirros.*uec$"
         volume_size: 1
       runner:
         type: "constant"
@@ -864,7 +864,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "cirros-0.3.2-x86_64-uec"
+            name: "^cirros.*uec$"
         volume_size: 1
       runner:
         type: "constant"
@@ -883,7 +883,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "cirros-0.3.2-x86_64-uec"
+            name: "^cirros.*uec$"
       runner:
         type: "constant"
         times: 2
@@ -901,7 +901,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "cirros-0.3.2-x86_64-uec"
+            name: "^cirros.*uec$"
         auto_assign_nics: false
       runner:
         type: "constant"
@@ -918,7 +918,7 @@
         flavor:
             name: "m1.tiny"
         image:
-            name: "cirros-0.3.2-x86_64-uec"
+            name: "^cirros.*uec$"
       runner:
         type: "constant"
         times: 4
@@ -936,7 +936,7 @@
         flavor:
           name: "m1.tiny"
         image:
-          name: "cirros-0.3.2-x86_64-uec"
+          name: "^cirros.*uec$"
         fixed_network: "private"
         floating_network: "public"
         use_floatingip: true
@@ -959,7 +959,7 @@
         flavor:
           name: "m1.tiny"
         image:
-          name: "cirros-0.3.2-x86_64-uec"
+          name: "^cirros.*uec$"
         volume_args:
             size: 2
         fixed_network: "private"
@@ -984,7 +984,7 @@
         flavor:
           name: "m1.tiny"
         image:
-          name: "cirros-0.3.2-x86_64-uec"
+          name: "^cirros.*uec$"
         fixed_network: "private"
         use_floatingip: false
         script: "/home/jenkins/.rally/extra/instance_dd_test.sh"
