Add SLA to Designate scenarios
Change-Id: I175c0fd5a2d171825ec59cb1b099953345306953

--- a/rally-scenarios/rally-designate.yaml
+++ b/rally-scenarios/rally-designate.yaml
@@ -9,6 +9,8 @@
         users:
           tenants: 2
           users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
 
   DesignateBasic.create_and_delete_records:
     -
@@ -22,6 +24,8 @@
         users:
           tenants: 2
           users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
 
   DesignateBasic.create_and_list_domains:
     -
@@ -33,6 +37,8 @@
         users:
           tenants: 2
           users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
 
   DesignateBasic.create_and_list_records:
     -
@@ -46,6 +52,8 @@
         users:
           tenants: 2
           users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
 
   DesignateBasic.list_domains:
     -
@@ -57,3 +65,5 @@
         users:
           tenants: 2
           users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
