Add force_delete to safely delete created VMs
When Nova allows soft-delete operation, currently, rally cannot
deal with it and throws the exception when delete all the created
VMs.

Reproducing: (Nova enables soft-delete)
1. Run task: boot-from-volume-and-delete.json
2. It creates several VMs and volumes.
3. It deletes VMs.
4. VM states change to soft-deleted, but volume state is still in-use
because VM is not truly deleted.
5. It throws an exception saying that volume cannot be deleted.
6. The task is failed.

This fix adds force_delete when nova calls delete-server.
You can specify 'force_delete' in task configuration to determine
whether to use default delete action or force_delete action.

Change-Id: I56ac5c039b525a8b05960dfbfd3ff0cacec0aef6
Closes-Bug: #1394119

--- a/doc/samples/tasks/scenarios/nova/boot-and-delete.yaml
+++ b/doc/samples/tasks/scenarios/nova/boot-and-delete.yaml
@@ -6,6 +6,7 @@
             name: "m1.nano"
         image:
             name: "^cirros.*uec$"
+        force_delete: false
       runner:
         type: "constant"
         times: 10
