--- a/doc/samples/tasks/scenarios/nova/boot-from-volume-and-delete.yaml
+++ b/doc/samples/tasks/scenarios/nova/boot-from-volume-and-delete.yaml
@@ -7,6 +7,7 @@
         image:
             name: "^cirros.*uec$"
         volume_size: 10
+        force_delete: false
       runner:
         type: "constant"
         times: 10
