--- a/rally-jobs/rally.yaml
+++ b/rally-jobs/rally.yaml
@@ -786,6 +786,24 @@
       sla:
         max_failure_percent: 0
 
+    -
+      args:
+        flavor:
+            name: "m1.tiny"
+        image:
+            name: "^cirros.*uec$"
+        force_delete: true
+      runner:
+        type: "constant"
+        times: 4
+        concurrency: 2
+      context:
+        users:
+          tenants: 3
+          users_per_tenant: 2
+      sla:
+        max_failure_percent: 0
+
   NovaServers.boot_and_list_server:
     -
       args:
