--- a/doc/samples/tasks/scenarios/ceilometer/create-and-delete-alarm.yaml
+++ b/doc/samples/tasks/scenarios/ceilometer/create-and-delete-alarm.yaml
@@ -13,3 +13,7 @@
          type: "constant"
          times: 10
          concurrency: 1
+       context:
+         users:
+           tenants: 2
+           users_per_tenant: 2
