--- a/doc/samples/tasks/scenarios/ceilometer/create-and-query-alarm-history.yaml
+++ b/doc/samples/tasks/scenarios/ceilometer/create-and-query-alarm-history.yaml
@@ -15,3 +15,7 @@
          type: "constant"
          times: 100
          concurrency: 10
+       context:
+         users:
+           tenants: 2
+           users_per_tenant: 2
