--- a/doc/samples/tasks/scenarios/ceilometer/create-and-query-alarms.yaml
+++ b/doc/samples/tasks/scenarios/ceilometer/create-and-query-alarms.yaml
@@ -16,3 +16,7 @@
          type: "constant"
          times: 100
          concurrency: 10
+       context:
+         users:
+           tenants: 2
+           users_per_tenant: 2
