--- a/doc/samples/tasks/scenarios/ceilometer/create-meter-and-get-stats.yaml
+++ b/doc/samples/tasks/scenarios/ceilometer/create-meter-and-get-stats.yaml
@@ -11,3 +11,7 @@
          type: "constant"
          times: 200
          concurrency: 5
+       context:
+         users:
+           tenants: 2
+           users_per_tenant: 2
