--- a/doc/samples/tasks/scenarios/ceilometer/list-alarms.yaml
+++ b/doc/samples/tasks/scenarios/ceilometer/list-alarms.yaml
@@ -5,3 +5,7 @@
          type: "constant"
          times: 10
          concurrency: 1
+       context:
+         users:
+           tenants: 2
+           users_per_tenant: 2
